link class added

--- a/index.html
+++ b/index.html
@@ -37,31 +37,31 @@
                 <div class="category-menu">
                     <ul class="category-links">
                         <li>
-                            <a href="#">Auto</a>
+                            <a class="category-link" href="#">Auto</a>
                         </li>
                         <li>
-                            <a href="#">Animals</a>
+                            <a class="category-link" href="#">Animals</a>
                         </li>
                         <li>
-                            <a href="#">Home and Garden</a>
+                            <a class="category-link" href="#">Home and Garden</a>
                         </li>
                         <li>
-                            <a href="category.html">Electronics</a>
+                            <a class="category-link" href="category.html">Electronics</a>
                         </li>
                         <li>
-                            <a href="#">Business & Services</a>
+                            <a class="category-link" href="#">Business & Services</a>
                         </li>
                         <li>
-                            <a href="#">Fashion & Style</a>
+                            <a class="category-link" href="#">Fashion & Style</a>
                         </li>
                         <li>
-                            <a href="#">Baby items</a>
+                            <a class="category-link" href="#">Baby items</a>
                         </li>
                         <li>
-                            <a href="#">Hobbies</a>
+                            <a class="category-link" href="#">Hobbies</a>
                         </li>
                         <li>
-                            <a href="#">Other</a>
+                            <a class="category-link" href="#">Other</a>
                         </li>
                     </ul>
                 </div>
